--- a/gb/22/10/26/n13852864.md
+++ b/gb/22/10/26/n13852864.md
@@ -47,31 +47,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/6/n10834250.md#1" target="_blank">林辉：一生没有得到思维乐趣的王小波之父</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/11/13/n2327659.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/11/n9829932.md#1" target="_blank">杨宁：邓小平妻兄服毒自尽 两连襟被迫害死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/23/n4278970.md#1" target="_blank">唐风：加拿大警官看完《转法轮》之后</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928876.md#1">同日出生死亡的缅甸夫妇转生双胞胎 再续前缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927307.md#1">【未解之谜】改命用错招 预言大师难逃宿命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926855.md#1">【救世古鉴】通过色欲门考验  他走过生死关得后福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927497.md#1">中共是贼  中华是国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13929957.md#1">【未解之谜】来自星星的孩子（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13932141.md#1">【马克时空】巴赫穆特久攻不下 俄国放软身段卖印军武</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931410.md#1">【舞蹈】王琛说舞蹈 第四集：怎么坐 更精神（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13931904.md#1">【全球新闻】回应气球门 拜登：不会向中共道歉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13929963.md#1">武汉老人抗议医保改革 警暴力驱赶画面曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930248.md#1">大连人抗议医保改革 现场人山人海 特警戒备</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929798.md#1">邓超情人节送妻一盆菜 孙俪直呼“深得我心”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929798.md#1">邓超情人节送妻一盆菜 孙俪直呼“深得我心”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930628.md#1">《狂飙》警员全身穿外国名牌 中共宣传自打脸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929843.md#1">周杰伦做情人节大餐宠妻 昆凌手捧玫瑰甜笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13929903.md#1">移民风波后首度现身 冯小刚参加何平追思会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930187.md#1">李李仁重视亲子不体罚 点出家庭“幸福关键”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929812.md#1">预防退化性关节炎 医师推荐四方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931046.md#1">乘客在飞机上常犯哪些错误？ 空姐这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930251.md#1">面试很多次还是找不到工作？ 专家解析原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929808.md#1">针刺和草药综合疗法 效治疗忧郁症效果好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931066.md#1">【美食天堂】吐司面包摇身变成酥脆虾多士</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962711.md#1">【晚间新闻】河北邯郸驾车撞人案 伤亡或惨重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962804.md#1">【环球直击】川普被刑事起诉 各界呼吁结束闹剧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963341.md#1">【马克时空】美陆战队坦克兵谈M1A1（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961584.md#1">田馥甄喜迎40岁 深夜无预警再揭8月喜讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/26/n13852864.htm">郑存柱：致中国共青团全体团员的公开信</a></p><hr>
